[package]
name = "omegadrive"
version = "1.0.0"
edition = "2021"


[[bin]]
name = "omega"
path = "src/main.rs"

[dependencies]
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde-big-array = "0.5"
bincode = "1.3"
lazy_static = "1.4"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
safetensors = "0.3"
num_cpus = "1.16"
bytes = "1.5"
fxhash = "0.2"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
cudarc = { version = "0.9", features = ["driver", "nvrtc", "curand"], optional = true }
sysinfo = "0.30.0"
memmap2 = "0.9.10"
ahash = "0.8.12"
socket2 = { version = "0.5.5", features = ["all"] }
notify = "6.1.1"
libc = "0.2"
chacha20 = "0.9.1"


[features]
default = ["cuda"]
cuda = ["dep:cudarc"]
python = []
