[package]
name = "omegadrive"
version = "1.0.0"
edition = "2021"


[[bin]]
name = "omega"
path = "src/main.rs"

[dependencies]
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde-big-array = "0.5"
bincode = "1.3"
lazy_static = "1.4"
hex = "0.4"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
safetensors = "0.3"
ndarray = "0.15"
redis-protocol = "4.0"
num_cpus = "1.16"
bytes = "1.5"
fxhash = "0.2"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
cudarc = { version = "0.9", features = ["driver", "nvrtc", "curand"], optional = true }
sysinfo = "0.39.0"
memmap2 = "0.9.10"
ahash = "0.8.12"
socket2 = { version = "0.5.5", features = ["all"] }
hmac = "0.13.0"
sha2 = "0.11.0"
redis = "1.2.1"
notify = "6.1.1"
url = "2.5.8"
flate2 = "1.0"
md5 = "0.8.0"
libc = "0.2"
chacha20 = "0.9.1"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
webp = "0.2"
rusttype = "0.9"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }


[features]
default = ["cuda"]
cuda = ["dep:cudarc"]
python = ["dep:pyo3"]
